@@ -1,18 +1,50 @@
+/*************
+Copyright (c) 2019, The University of California at Berkeley.
+
+Redistribution and use in source and binary forms, with or without modification,
+are permitted provided that the following conditions are met:
+
+1. Redistributions of source code must retain the above copyright notice,
+   this list of conditions and the following disclaimer.
+
+2. Redistributions in binary form must reproduce the above copyright notice,
+   this list of conditions and the following disclaimer in the documentation
+   and/or other materials provided with the distribution.
+
+THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR
+ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+***************/
+
 package org.lflang;
 
+import java.io.IOException;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.function.BiConsumer;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import org.eclipse.xtext.util.RuntimeIOException;
+import org.lflang.TargetConfig.DockerOptions;
+import org.lflang.TargetConfig.TracingOptions;
+import org.lflang.generator.InvalidLfSourceException;
+import org.lflang.generator.rust.CargoDependencySpec;
+import org.lflang.generator.rust.CargoDependencySpec.CargoDependenciesPropertyType;
 import org.lflang.lf.Array;
 import org.lflang.lf.Element;
 import org.lflang.lf.KeyValuePair;
 import org.lflang.lf.KeyValuePairs;
-import org.lflang.lf.TimeUnit;
-import org.lflang.validation.LFValidatorImpl;
+import org.lflang.util.FileUtil;
+import org.lflang.validation.LFValidator;
 
 /**
  * A target properties along with a type and a list of supporting targets
@@ -26,34 +58,37 @@ public enum TargetProperty {
      * Directive to let the generator use the custom build command.
      */
     BUILD("build", UnionType.STRING_OR_STRING_ARRAY,
-            Arrays.asList(Target.C), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
                 config.buildCommands = ASTUtils.toListOfStrings(value);
             }),
     
     /**
      * Directive to specify the target build type such as 'Release' or 'Debug'.
+     * This is also used in the Rust target to select a Cargo profile.
      */
     BUILD_TYPE("build-type", UnionType.BUILD_TYPE_UNION,
-            Arrays.asList(Target.CPP), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP, Target.CPP, Target.Rust), (config, value, err) -> {
                 config.cmakeBuildType = (BuildType) UnionType.BUILD_TYPE_UNION
                         .forName(ASTUtils.toText(value));
+                // set it there too, because the default is different.
+                config.rust.setBuildType(config.cmakeBuildType);
             }),
-    
+
     /**
      * Directive to let the federate execution handle clock synchronization in software.
      */
     CLOCK_SYNC("clock-sync", UnionType.CLOCK_SYNC_UNION,
-            Arrays.asList(Target.C), (config, value) -> {
-                config.clockSync = (ClockSyncMode) UnionType.CLOCK_SYNC_UNION
-                        .forName(ASTUtils.toText(value));
-            }),
+               Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
+        config.clockSync = (ClockSyncMode) UnionType.CLOCK_SYNC_UNION
+            .forName(ASTUtils.toText(value));
+    }),
     
     /**
      * Key-value pairs giving options for clock synchronization.
      */
     CLOCK_SYNC_OPTIONS("clock-sync-options",
-            DictionaryType.CLOCK_SYNC_OPTION_DICT, Arrays.asList(Target.C),
-            (config, value) -> {
+            DictionaryType.CLOCK_SYNC_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP),
+            (config, value, err) -> {
                 for (KeyValuePair entry : value.getKeyvalue().getPairs()) {
                     ClockSyncOption option = (ClockSyncOption) DictionaryType.CLOCK_SYNC_OPTION_DICT
                             .forName(entry.getName());
@@ -92,12 +127,19 @@ public enum TargetProperty {
      * Directive to specify a cmake to be included by the generated build
      * systems.
      *
-     * This gives full control over the C++ build as any cmake parameters
+     * This gives full control over the C/C++ build as any cmake parameters
      * can be adjusted in the included file.
      */
-    CMAKE_INCLUDE("cmake-include", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP, Target.C), (config, value) -> {
-                config.cmakeInclude = ASTUtils.toText(value);
+    CMAKE_INCLUDE("cmake-include", UnionType.FILE_OR_FILE_ARRAY,
+            Arrays.asList(Target.CPP, Target.C, Target.CCPP), (config, value, err) -> {
+                config.cmakeIncludes = ASTUtils.toListOfStrings(value);
+            },
+            // FIXME: This merging of lists is potentially dangerous since
+            // the incoming list of cmake-includes can belong to a .lf file that is
+            // located in a different location, and keeping just filename
+            // strings like this without absolute paths is incorrect.
+            (config, value, err) -> {
+                config.cmakeIncludes.addAll(ASTUtils.toListOfStrings(value));
             }),
     
     /**
@@ -106,15 +148,15 @@ public enum TargetProperty {
      * The default is enabled.
      */
     CMAKE("cmake", PrimitiveType.BOOLEAN,
-            Arrays.asList(Target.C), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
                 config.useCmake = ASTUtils.toBoolean(value);
             }),
     
     /**
      * Directive to specify the target compiler.
      */
-    COMPILER("compiler", PrimitiveType.STRING, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    COMPILER("compiler", PrimitiveType.STRING, Target.ALL,
+            (config, value, err) -> {
                 config.compiler = ASTUtils.toText(value);
             }),
     
@@ -123,7 +165,7 @@ public enum TargetProperty {
      * true or false, or a dictionary of options.
      */
     DOCKER("docker", UnionType.DOCKER_UNION,
-            Arrays.asList(Target.C), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP, Target.Python, Target.TS), (config, value, err) -> {
                 if (value.getLiteral() != null) {
                     if (ASTUtils.toBoolean(value)) {
                         config.dockerOptions = new DockerOptions();
@@ -151,7 +193,7 @@ public enum TargetProperty {
      * compiled binary.
      */
     EXTERNAL_RUNTIME_PATH("external-runtime-path", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP), (config, value) -> {
+            Arrays.asList(Target.CPP), (config, value, err) -> {
                 config.externalRuntimePath = ASTUtils.toText(value);
             }),
 
@@ -159,8 +201,8 @@ public enum TargetProperty {
      * Directive to let the execution engine allow logical time to elapse
      * faster than physical time.
      */
-    FAST("fast", PrimitiveType.BOOLEAN, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    FAST("fast", PrimitiveType.BOOLEAN, Target.ALL,
+            (config, value, err) -> {
                 config.fastMode = ASTUtils.toBoolean(value);
             }),
     
@@ -168,16 +210,23 @@ public enum TargetProperty {
      * Directive to stage particular files on the class path to be
      * processed by the code generator.
      */
-    FILES("files", UnionType.FILE_OR_FILE_ARRAY, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    FILES("files", UnionType.FILE_OR_FILE_ARRAY, List.of(Target.C, Target.CCPP, Target.Python),
+            (config, value, err) -> {
                 config.fileNames = ASTUtils.toListOfStrings(value);
+            },
+            // FIXME: This merging of lists is potentially dangerous since
+            // the incoming list of files can belong to a .lf file that is
+            // located in a different location, and keeping just filename
+            // strings like this without absolute paths is incorrect.
+            (config, value, err) -> {
+                config.fileNames.addAll(ASTUtils.toListOfStrings(value));
             }),
     
     /**
      * Flags to be passed on to the target compiler.
      */
     FLAGS("flags", UnionType.STRING_OR_STRING_ARRAY,
-            Arrays.asList(Target.C, Target.CCPP), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP), (config, value, err) -> {
                 config.compilerFlags = ASTUtils.toListOfStrings(value);
             }),
     
@@ -186,7 +235,7 @@ public enum TargetProperty {
      */
     COORDINATION("coordination", UnionType.COORDINATION_UNION,
             Arrays.asList(Target.C, Target.CCPP, Target.Python),
-            (config, value) -> {
+            (config, value, err) -> {
                 config.coordination = (CoordinationType) UnionType.COORDINATION_UNION
                         .forName(ASTUtils.toText(value));
             }),
@@ -195,8 +244,8 @@ public enum TargetProperty {
      * Key-value pairs giving options for clock synchronization.
      */
     COORDINATION_OPTIONS("coordination-options",
-            DictionaryType.COORDINATION_OPTION_DICT, Arrays.asList(Target.C),
-            (config, value) -> {
+            DictionaryType.COORDINATION_OPTION_DICT, Arrays.asList(Target.C, Target.CCPP),
+            (config, value, err) -> {
                 for (KeyValuePair entry : value.getKeyvalue().getPairs()) {
                     CoordinationOption option = (CoordinationOption) DictionaryType.COORDINATION_OPTION_DICT
                             .forName(entry.getName());
@@ -215,16 +264,16 @@ public enum TargetProperty {
      * Directive to let the execution engine remain active also if there
      * are no more events in the event queue.
      */
-    KEEPALIVE("keepalive", PrimitiveType.BOOLEAN, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    KEEPALIVE("keepalive", PrimitiveType.BOOLEAN, Target.ALL,
+            (config, value, err) -> {
                 config.keepalive = ASTUtils.toBoolean(value);
             }),
     
     /**
      * Directive to specify the grain at which to report log messages during execution.
      */
-    LOGGING("logging", UnionType.LOGGING_UNION, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    LOGGING("logging", UnionType.LOGGING_UNION, Target.ALL,
+            (config, value, err) -> {
                 config.logLevel = (LogLevel) UnionType.LOGGING_UNION
                         .forName(ASTUtils.toText(value));
             }),
@@ -234,7 +283,7 @@ public enum TargetProperty {
      */
     NO_COMPILE("no-compile", PrimitiveType.BOOLEAN,
             Arrays.asList(Target.C, Target.CPP, Target.CCPP, Target.Python),
-            (config, value) -> {
+            (config, value, err) -> {
                 config.noCompile = ASTUtils.toBoolean(value);
             }),
     
@@ -242,7 +291,7 @@ public enum TargetProperty {
      * Directive to disable validation of reactor rules at runtime.
      */
     NO_RUNTIME_VALIDATION("no-runtime-validation", PrimitiveType.BOOLEAN,
-            Arrays.asList(Target.CPP), (config, value) -> {
+            Arrays.asList(Target.CPP), (config, value, err) -> {
                 config.noRuntimeValidation = ASTUtils.toBoolean(value);
             }),
     
@@ -251,33 +300,69 @@ public enum TargetProperty {
      * code included in the sources.
      */
     PROTOBUFS("protobufs", UnionType.FILE_OR_FILE_ARRAY,
-            Arrays.asList(Target.C, Target.TS, Target.Python),
-            (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP, Target.TS, Target.Python),
+            (config, value, err) -> {
                 config.protoFiles = ASTUtils.toListOfStrings(value);
             }),
+
+
+    /**
+     * Directive to specify that ROS2 specific code is generated,
+     */
+    ROS2("ros2", PrimitiveType.BOOLEAN,
+         List.of(Target.CPP), (config, value, err) -> {
+             config.ros2 = ASTUtils.toBoolean(value);
+    }),
 
     /**
      * Directive for specifying a specific version of the reactor runtime library.
      */
     RUNTIME_VERSION("runtime-version", PrimitiveType.STRING,
-            Arrays.asList(Target.CPP), (config, value) -> {
+            Arrays.asList(Target.CPP), (config, value, err) -> {
                 config.runtimeVersion = ASTUtils.toText(value);
+            }),
+    
+    
+    /**
+     * Directive for specifying a specific runtime scheduler, if supported.
+     */
+    SCHEDULER("scheduler", UnionType.SCHEDULER_UNION,
+            Arrays.asList(Target.C, Target.CCPP, Target.Python), (config, value, err) -> {
+                config.schedulerType = (SchedulerOption) UnionType.SCHEDULER_UNION
+                        .forName(ASTUtils.toText(value));
             }),
 
     /**
-     * Directive to specify the number of threads.
+     * Directive to specify that all code is generated in a single file.
      */
-    THREADS("threads", PrimitiveType.NON_NEGATIVE_INTEGER,
-            Arrays.asList(Target.C, Target.CPP, Target.CCPP),
-            (config, value) -> {
-                config.threads = ASTUtils.toInteger(value);
+    SINGLE_FILE_PROJECT("single-file-project", PrimitiveType.BOOLEAN,
+            List.of(Target.Rust), (config, value, err) -> {
+                config.singleFileProject = ASTUtils.toBoolean(value);
+            }),
+
+    /**
+     * Directive to indicate whether the runtime should use multi-threading.
+     */
+    THREADING("threading", PrimitiveType.BOOLEAN,
+              List.of(Target.C, Target.CCPP, Target.Python),
+              (config, value, err) -> {
+                  config.threading = ASTUtils.toBoolean(value);
+              }),
+
+    /**
+     * Directive to specify the number of worker threads used by the runtime.
+     */
+    WORKERS("workers", PrimitiveType.NON_NEGATIVE_INTEGER,
+            List.of(Target.C, Target.CCPP, Target.Python, Target.CPP, Target.Rust),
+            (config, value, err) -> {
+                config.workers = ASTUtils.toInteger(value);
             }),
     
     /**
      * Directive to specify the execution timeout.
      */
-    TIMEOUT("timeout", PrimitiveType.TIME_VALUE, Arrays.asList(Target.ALL),
-            (config, value) -> {
+    TIMEOUT("timeout", PrimitiveType.TIME_VALUE, Target.ALL,
+            (config, value, err) -> {
                 config.timeout = ASTUtils.toTimeValue(value);
             }),
     
@@ -286,7 +371,7 @@ public enum TargetProperty {
      * true or false, or a dictionary of options.
      */
     TRACING("tracing", UnionType.TRACING_UNION,
-            Arrays.asList(Target.C, Target.CPP), (config, value) -> {
+            Arrays.asList(Target.C, Target.CCPP, Target.CPP, Target.Python), (config, value, err) -> {
                 if (value.getLiteral() != null) {
                     if (ASTUtils.toBoolean(value)) {
                         config.tracing = new TracingOptions();
@@ -297,23 +382,122 @@ public enum TargetProperty {
                     config.tracing = new TracingOptions();
                     for (KeyValuePair entry : value.getKeyvalue().getPairs()) {
                         TracingOption option = (TracingOption) DictionaryType.TRACING_DICT
-                                .forName(entry.getName());
+                            .forName(entry.getName());
                         switch (option) {
-                            case TRACE_FILE_NAME:
-                                config.tracing.traceFileName = ASTUtils.toText(entry.getValue());
-                                break;
-                            default:
-                                break;
+                        case TRACE_FILE_NAME:
+                            config.tracing.traceFileName = ASTUtils.toText(entry.getValue());
+                            break;
+                        default:
+                            break;
                         }
                     }
                 }
-            });
-    
+            }),
+
+
+    /**
+     * Directive to let the runtime export its internal dependency graph.
+     *
+     * This is a debugging feature and currently only used for C++ and Rust programs.
+     */
+    EXPORT_DEPENDENCY_GAPH("export-dependency-graph", PrimitiveType.BOOLEAN,
+                           List.of(Target.CPP, Target.Rust),
+                           (config, value, err) -> {
+        config.exportDependencyGraph = ASTUtils.toBoolean(value);
+    }),
+
+    /**
+     * Directive to let the runtime export the program structure to a yaml file.
+     *
+     * This is a debugging feature and currently only used for C++ programs.
+     */
+    EXPORT_TO_YAML("export-to-yaml", PrimitiveType.BOOLEAN,
+                           List.of(Target.CPP),
+                           (config, value, err) -> {
+                               config.exportToYaml = ASTUtils.toBoolean(value);
+                           }),
+
+    /**
+     * List of module files to link into the crate as top-level.
+     * For instance, a {@code target Rust { rust-modules: [ "foo.rs" ] }}
+     * will cause the file to be copied into the generated project,
+     * and the generated `main.rs` will include it with a `mod foo;`.
+     * If one of the paths is a directory, it must contain a `mod.rs`
+     * file, and all its contents are copied.
+     */
+    RUST_INCLUDE("rust-include",
+                 UnionType.FILE_OR_FILE_ARRAY,
+                 List.of(Target.Rust), (config, value, err) -> {
+        Path referencePath;
+        try {
+            referencePath = FileUtil.toPath(value.eResource().getURI()).toAbsolutePath();
+        } catch (IOException e) {
+            err.reportError(value, "Invalid path? " + e.getMessage());
+            throw new RuntimeIOException(e);
+        }
+
+        // we'll resolve relative paths to check that the files
+        // are as expected.
+
+        if (value.getLiteral() != null) {
+            Path resolved = referencePath.resolveSibling(ASTUtils.withoutQuotes(value.getLiteral()));
+
+            config.rust.addAndCheckTopLevelModule(resolved, value, err);
+        } else if (value.getArray() != null) {
+            for (Element element : value.getArray().getElements()) {
+                String literal = ASTUtils.withoutQuotes(element.getLiteral());
+                Path resolved = referencePath.resolveSibling(literal);
+                config.rust.addAndCheckTopLevelModule(resolved, element, err);
+            }
+        }
+    }),
+
+    /**
+     * Directive for specifying Cargo features of the generated
+     * program to enable.
+     */
+    CARGO_FEATURES("cargo-features", ArrayType.STRING_ARRAY,
+                   List.of(Target.Rust), (config, value, err) -> {
+        config.rust.setCargoFeatures(ASTUtils.toListOfStrings(value));
+    }),
+
+    /**
+     * Dependency specifications for Cargo. This property looks like this:
+     * <pre>{@code
+     * cargo-dependencies: {
+     *    // Name-of-the-crate: "version"
+     *    rand: "0.8",
+     *    // Equivalent to using an explicit map:
+     *    rand: {
+     *      version: "0.8"
+     *    },
+     *    // The map allows specifying more details
+     *    rand: {
+     *      // A path to a local unpublished crate.
+     *      // Note 'path' is mutually exclusive with 'version'.
+     *      path: "/home/me/Git/local-rand-clone"
+     *    },
+     *    rand: {
+     *      version: "0.8",
+     *      // you can specify cargo features
+     *      features: ["some-cargo-feature",]
+     *    }
+     * }
+     * }</pre>
+     */
+    CARGO_DEPENDENCIES("cargo-dependencies",
+                       CargoDependenciesPropertyType.INSTANCE,
+                       List.of(Target.Rust), (config, value, err) -> {
+        config.rust.setCargoDependencies(CargoDependencySpec.parseAll(value));
+    }),
+
+    ;
+
     /**
      * String representation of this target property.
      */
     public final String description;
-    
+
     /**
      * List of targets that support this property. If a property is used for
      * a target that does not support it, a warning reported during
@@ -325,30 +509,102 @@ public enum TargetProperty {
      * The type of values that can be assigned to this property.
      */
     public final TargetPropertyType type;
-    
+
     /**
      * Function that given a configuration object and an Element AST node
-     * updates the configuration. It is assumed that validation already
+     * sets the configuration. It is assumed that validation already
      * occurred, so this code should be straightforward.
      */
-    public final BiConsumer<TargetConfig, Element> setter;
-    
+    public final PropertyParser setter;
+
+    /**
+     * Function that given a configuration object and an Element AST node
+     * sets the configuration. It is assumed that validation already
+     * occurred, so this code should be straightforward.
+     */
+    public final PropertyParser updater;
+
+    @FunctionalInterface
+    private interface PropertyParser {
+
+        /**
+         * Parse the given element into the given target config.
+         * May use the error reporter to report format errors.
+         */
+        void parseIntoTargetConfig(TargetConfig config, Element element, ErrorReporter err);
+    }
+
     /**
      * Private constructor for target properties.
-     * 
+     *
      * @param description String representation of this property.
      * @param type        The type that values assigned to this property
      *                    should conform to.
      * @param supportedBy List of targets that support this property.
      * @param setter      Function for configuration updates.
      */
-    private TargetProperty(String description, TargetPropertyType type,
-            List<Target> supportedBy,
-            BiConsumer<TargetConfig, Element> setter) {
+    TargetProperty(String description, TargetPropertyType type,
+                   List<Target> supportedBy,
+                   PropertyParser setter) {
         this.description = description;
         this.type = type;
         this.supportedBy = supportedBy;
         this.setter = setter;
+        this.updater = (config, value, err) -> { /* Ignore the update by default */ };
+    }
+    
+    /**
+     * Private constructor for target properties. This will take an additional
+     * `updater`, which will be used to merge target properties from imported resources.
+     * 
+     * @param description String representation of this property.
+     * @param type        The type that values assigned to this property
+     *                    should conform to.
+     * @param supportedBy List of targets that support this property.
+     * @param setter      Function for setting configuration values.
+     * @param updater     Function for updating configuration values.
+     */
+    TargetProperty(String description, TargetPropertyType type,
+                   List<Target> supportedBy,
+                   PropertyParser setter,
+                   PropertyParser updater) {
+        this.description = description;
+        this.type = type;
+        this.supportedBy = supportedBy;
+        this.setter = setter;
+        this.updater = updater;
+    }
+
+    /**
+     * Return the name of the property in lingua franca. This
+     * is suitable for use as a key in a target properties block.
+     * It may be an invalid identifier in other languages (may
+     * contains dashes {@code -}).
+     */
+    public String getDisplayName() {
+        return description;
+    }
+
+    /**
+     * Set the given configuration using the given target properties.
+     *
+     * @param config     The configuration object to update.
+     * @param properties AST node that holds all the target properties.
+     * @param err        Error reporter on which property format errors will be reported
+     */
+    public static void set(TargetConfig config, List<KeyValuePair> properties, ErrorReporter err) {
+        properties.forEach(property ->  {
+            TargetProperty p = forName(property.getName());
+            if (p != null) {
+                // Mark the specified target property as set by the user
+                config.setByUser.add(p);
+                try {
+                    p.setter.parseIntoTargetConfig(config, property.getValue(), err);
+                } catch (InvalidLfSourceException e) {
+                    err.reportError(e.getNode(), e.getProblem());
+                }
+            }
+        });
     }
 
     /**
@@ -357,14 +613,37 @@ public enum TargetProperty {
      * @param config     The configuration object to update.
      * @param properties AST node that holds all the target properties.
      */
-    public static void update(TargetConfig config,
-            List<KeyValuePair> properties) {
+    public static void update(TargetConfig config, List<KeyValuePair> properties,ErrorReporter err) {
         properties.forEach(property ->  {
             TargetProperty p = forName(property.getName());
             if (p != null) {
-                p.setter.accept(config, property.getValue());
+                p.updater.parseIntoTargetConfig(config, property.getValue(), err);
             }
         });
+    }
+
+    /**
+     * Update one of the target properties, given by 'propertyName'.
+     * For convenience, a list of target properties (e.g., taken from
+     * a file or resource) can be passed without any filtering. This
+     * function will do nothing if the list of target properties doesn't
+     * include the property given by 'propertyName'.
+     *
+     * @param config     The target config to apply the update to.
+     * @param property   The target property.
+     * @param properties AST node that holds all the target properties.
+     * @param err        Error reporter on which property format errors will be reported
+     */
+    public static void updateOne(TargetConfig config, TargetProperty property, List<KeyValuePair> properties, ErrorReporter err) {
+        properties.stream()
+            .filter(p -> p.getName().equals(property.getDisplayName()))
+            .findFirst()
+            .map(KeyValuePair::getValue)
+            .ifPresent(value -> property.updater.parseIntoTargetConfig(
+                config,
+                value,
+                err
+            ));
     }
 
     /**
@@ -393,12 +672,15 @@ public enum TargetProperty {
     }
 
     // Inner classes for the various supported types.
-    
+
+
+
     /**
      * Interface for dictionary elements. It associates an entry with a type.
      */
     public interface DictionaryElement {
-        public TargetPropertyType getType();
+
+        TargetPropertyType getType();
     }
 
     /**
@@ -412,7 +694,7 @@ public enum TargetProperty {
         CLOCK_SYNC_OPTION_DICT(Arrays.asList(ClockSyncOption.values())),
         DOCKER_DICT(Arrays.asList(DockerOption.values())),
         COORDINATION_OPTION_DICT(Arrays.asList(CoordinationOption.values())),
-        TRACING_DICT(Arrays.asList(TracingOption.values())); 
+        TRACING_DICT(Arrays.asList(TracingOption.values()));
         
         /**
          * The keys and assignable types that are allowed in this dictionary.
@@ -445,7 +727,7 @@ public enum TargetProperty {
          * this dictionary.
          */
         @Override
-        public void check(Element e, String name, LFValidatorImpl v) {
+        public void check(Element e, String name, LFValidator v) {
             KeyValuePairs kv = e.getKeyvalue();
             if (kv == null) {
                 TargetPropertyType.produceError(name, this.toString(), v);
@@ -505,9 +787,10 @@ public enum TargetProperty {
         BUILD_TYPE_UNION(Arrays.asList(BuildType.values()), null),
         COORDINATION_UNION(Arrays.asList(CoordinationType.values()),
                 CoordinationType.CENTRALIZED),
+        SCHEDULER_UNION(Arrays.asList(SchedulerOption.values()), SchedulerOption.getDefault()),
         LOGGING_UNION(Arrays.asList(LogLevel.values()), LogLevel.INFO),
         CLOCK_SYNC_UNION(Arrays.asList(ClockSyncMode.values()),
-                ClockSyncMode.INITIAL),
+                ClockSyncMode.INIT),
         DOCKER_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.DOCKER_DICT),
                 null),
         TRACING_UNION(Arrays.asList(PrimitiveType.BOOLEAN, DictionaryType.TRACING_DICT),
@@ -550,7 +833,7 @@ public enum TargetProperty {
          * this union.
          */
         @Override
-        public void check(Element e, String name, LFValidatorImpl v) {
+        public void check(Element e, String name, LFValidator v) {
             Optional<Enum<?>> match = this.match(e);
             if (match.isPresent()) {
                 // Go deeper if the element is an array or dictionary.
@@ -647,7 +930,7 @@ public enum TargetProperty {
          * its elements are all of the correct type.
          */
         @Override
-        public void check(Element e, String name, LFValidatorImpl v) {
+        public void check(Element e, String name, LFValidator v) {
             Array array = e.getArray();
             if (array == null) {
                 TargetPropertyType.produceError(name, this.toString(), v);
@@ -680,9 +963,10 @@ public enum TargetProperty {
     }
     
     /**
-     * Enumeration of Cmake build types.
+     * Enumeration of Cmake build types. These are also mapped
+     * to Cargo profiles for the Rust target (see {@link org.lflang.generator.rust.RustTargetConfig})
      * 
-     * @author{Christian Menard <christian.menard@tu-dresden.de>}
+     * @author Christian Menard {@literal <christian.menard@tu-dresden.de>}
      */
     public enum BuildType {
         RELEASE("Release"), 
@@ -693,12 +977,12 @@ public enum TargetProperty {
         /**
          * Alias used in toString method.
          */
-        private String alias;
+        private final String alias;
         
         /**
          * Private constructor for Cmake build types.
          */
-        private BuildType(String alias) {
+        BuildType(String alias) {
             this.alias = alias;
         }
         
@@ -739,8 +1023,8 @@ public enum TargetProperty {
      * @author{Edward A. Lee <eal@berkeley.edu>}
      */
     public enum ClockSyncMode {
-        OFF, INITIAL, ON;
-        
+        OFF, INIT, ON; // TODO Discuss initial in now a mode keyword (same as startup) and cannot be used as target property value, thus changed it to init
+        // FIXME I could not test if this change breaks anything
         
         /**
          * Return the name in lower case.
@@ -775,7 +1059,7 @@ public enum TargetProperty {
          * @param name The name of the target property.
          * @param v    A reference to the validator to report errors to.
          */
-        public void check(Element e, String name, LFValidatorImpl v);
+        public void check(Element e, String name, LFValidator v);
     
         /**
          * Helper function to produce an error during type checking.
@@ -785,7 +1069,7 @@ public enum TargetProperty {
          * @param v           A reference to the validator to report errors to.
          */
         public static void produceError(String name, String description,
-                LFValidatorImpl v) {
+                LFValidator v) {
             v.getTargetPropertyErrors().add("Target property '" + name
                     + "' is required to be " + description + ".");
         }
@@ -822,15 +1106,15 @@ public enum TargetProperty {
         TIME_VALUE("a time value with units", v ->
             v.getKeyvalue() == null && v.getArray() == null
                 && v.getLiteral() == null && v.getId() == null
-                && (v.getTime() == 0 || v.getUnit() != TimeUnit.NONE)),
-        STRING("a string", v -> v.getLiteral() != null || v.getId() != null),
+                && (v.getTime() == 0 || v.getUnit() != null)),
+        STRING("a string", v -> v.getLiteral() != null && !isCharLiteral(v.getLiteral()) || v.getId() != null),
         FILE("a path to a file", STRING.validator);
     
         /**
          * A description of this type, featured in error messages.
          */
         private final String description;
-    
+
         /**
          * A predicate for determining whether a given Element conforms to this
          * type.
@@ -865,7 +1149,7 @@ public enum TargetProperty {
          * @param name   The name of the target property.
          * @param errors A list of errors to append to if problems are found.
          */
-        public void check(Element e, String name, LFValidatorImpl v) {
+        public void check(Element e, String name, LFValidator v) {
             if (!this.validate(e)) {
                 TargetPropertyType.produceError(name, this.description, v);
             }
@@ -891,6 +1175,13 @@ public enum TargetProperty {
         @Override
         public String toString() {
             return this.description;
+        }
+
+
+        private static boolean isCharLiteral(String s) {
+            return s.length() > 2
+                && '\'' == s.charAt(0)
+                && '\'' == s.charAt(s.length() - 1);
         }
     }
 
@@ -1012,6 +1303,37 @@ public enum TargetProperty {
             return this.name().toLowerCase();
         }
     }
+    
+    /**
+     * Supported schedulers.
+     * @author{Soroush Bateni <soroush@utdallas.edu>}
+     */
+    public enum SchedulerOption {
+        NP(false),         // Non-preemptive
+        GEDF_NP(true),    // Global EDF non-preemptive
+        GEDF_NP_CI(true); // Global EDF non-preemptive with chain ID
+        // PEDF_NP(true);    // Partitioned EDF non-preemptive (FIXME: To be re-added in a future PR)
+        
+        /**
+         * Indicate whether or not the scheduler prioritizes reactions by deadline.
+         */
+        private final Boolean prioritizesDeadline;
+        
+        /**
+         * Return true if the scheduler prioritizes reactions by deadline.
+         */
+        public Boolean prioritizesDeadline() {
+            return this.prioritizesDeadline;
+        }
+        
+        private SchedulerOption(Boolean prioritizesDeadline) {
+            this.prioritizesDeadline = prioritizesDeadline;
+        }
+        
+        public static SchedulerOption getDefault() {
+            return NP;
+        }
+    }
 
     /**
      * Tracing options.
@@ -1044,4 +1366,5 @@ public enum TargetProperty {
             return this.type;
         }
     }
+
 }
